Dynamic header / footer & create static pages

--- a/digi-shop/src/templates/_footer.html
+++ b/digi-shop/src/templates/_footer.html
@@ -1,57 +1,46 @@
 {% load i18n %}
 
-<footer class="flex flex-col items-center gap-3 text-center mt-auto w-full max-w-7xl py-10 px-4 sm:px-6 lg:px-8 mx-auto">
+<footer class="footer">
     {% include 'components/_logo.html' %}
-    <ul class="text-center">
-        <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
-            <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
-               href="#">
+    <ul class="footer-links">
+        <li class="footer-link-item">
+            <a class="footer-link" href="{% url 'shop:home' %}">
                 {% translate 'Home' %}
             </a>
         </li>
-        <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
-            <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
-               href="#">
+        <li class="footer-link-item">
+            <a class="footer-link" href="{% url 'shop:terms' %}">
                 {% translate 'Terms and Condition' %}
             </a>
         </li>
-        <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
-            <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
-               href="#">
+        <li class="footer-link-item">
+            <a class="footer-link" href="{% url 'shop:about' %}">
                 {% translate 'About' %}
             </a>
         </li>
-        <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
-            <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
-               href="#">
+        <li class="footer-link-item">
+            <a class="footer-link" href="{% url 'shop:contact' %}">
                 {% translate 'Contact' %}
             </a>
         </li>
-        <li class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300">
-            <a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800"
-               href="#">
+        <li class="footer-link-item">
+            <a class="footer-link" href="{% url 'shop:faq' %}">
                 {% translate 'FAQ' %}
             </a>
         </li>
     </ul>
-    <p class="text-gray-500">
+    <p class="footer-copyright">
         ©{% now "Y" %}<span class="mx-2 text-gray-300">|</span>{% translate 'All Right Received.' %}
     </p>
-    <div class="flex items-center justify-between gap-x-4">
-        <a href="#" class="fill-gray-500 hover:fill-gray-700 transition-colors">
-            <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                <path d="M26.111,3H5.889c-1.595,0-2.889,1.293-2.889,2.889V26.111c0,1.595,1.293,2.889,2.889,2.889H26.111c1.595,0,2.889-1.293,2.889-2.889V5.889c0-1.595-1.293-2.889-2.889-2.889ZM10.861,25.389h-3.877V12.87h3.877v12.519Zm-1.957-14.158c-1.267,0-2.293-1.034-2.293-2.31s1.026-2.31,2.293-2.31,2.292,1.034,2.292,2.31-1.026,2.31-2.292,2.31Zm16.485,14.158h-3.858v-6.571c0-1.802-.685-2.809-2.111-2.809-1.551,0-2.362,1.048-2.362,2.809v6.571h-3.718V12.87h3.718v1.686s1.118-2.069,3.775-2.069,4.556,1.621,4.556,4.975v7.926Z"></path>
-            </svg>
+    <div class="footer-social">
+        <a href="#" class="footer-social-link">
+            {% include 'components/icons/_linkedin.html' %}
         </a>
-        <a href="#" class="fill-gray-500 hover:fill-gray-700 transition-colors">
-            <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                <path d="M16,2.345c7.735,0,14,6.265,14,14-.002,6.015-3.839,11.359-9.537,13.282-.7,.14-.963-.298-.963-.665,0-.473,.018-1.978,.018-3.85,0-1.312-.437-2.152-.945-2.59,3.115-.35,6.388-1.54,6.388-6.912,0-1.54-.543-2.783-1.435-3.762,.14-.35,.63-1.785-.14-3.71,0,0-1.173-.385-3.85,1.435-1.12-.315-2.31-.472-3.5-.472s-2.38,.157-3.5,.472c-2.677-1.802-3.85-1.435-3.85-1.435-.77,1.925-.28,3.36-.14,3.71-.892,.98-1.435,2.24-1.435,3.762,0,5.355,3.255,6.563,6.37,6.913-.403,.35-.77,.963-.893,1.872-.805,.368-2.818,.963-4.077-1.155-.263-.42-1.05-1.452-2.152-1.435-1.173,.018-.472,.665,.017,.927,.595,.332,1.277,1.575,1.435,1.978,.28,.787,1.19,2.293,4.707,1.645,0,1.173,.018,2.275,.018,2.607,0,.368-.263,.787-.963,.665-5.719-1.904-9.576-7.255-9.573-13.283,0-7.735,6.265-14,14-14Z"></path>
-            </svg>
+        <a href="#" class="footer-social-link">
+            {% include 'components/icons/_github.html' %}
         </a>
-        <a href="#" class="fill-gray-500 hover:fill-gray-700 transition-colors">
-            <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                <path d="M16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm6.489,9.521c-.211,2.214-1.122,7.586-1.586,10.065-.196,1.049-.583,1.401-.957,1.435-.813,.075-1.43-.537-2.218-1.053-1.232-.808-1.928-1.311-3.124-2.099-1.382-.911-.486-1.412,.302-2.23,.206-.214,3.788-3.472,3.858-3.768,.009-.037,.017-.175-.065-.248-.082-.073-.203-.048-.29-.028-.124,.028-2.092,1.329-5.905,3.903-.559,.384-1.065,.571-1.518,.561-.5-.011-1.461-.283-2.176-.515-.877-.285-1.574-.436-1.513-.92,.032-.252,.379-.51,1.042-.773,4.081-1.778,6.803-2.95,8.164-3.517,3.888-1.617,4.696-1.898,5.222-1.907,.116-.002,.375,.027,.543,.163,.142,.115,.181,.27,.199,.379,.019,.109,.042,.357,.023,.551Z"></path>
-            </svg>
+        <a href="#" class="footer-social-link">
+            {% include 'components/icons/_telegram.html' %}
         </a>
     </div>
 </footer>
