--- a/digi-shop/src/templates/components/_dashboard_sidebar_menu.html
+++ b/digi-shop/src/templates/components/_dashboard_sidebar_menu.html
@@ -103,7 +103,7 @@
                             <span class="ms-auto py-0.5 px-1.5 inline-flex items-center gap-x-1.5 text-xs bg-gray-200 text-gray-800 rounded-full">New</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="hidden">
                         <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100"
                            href="{% url 'account:profile' %}">
                             <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -114,7 +114,7 @@
                             {% translate 'Wallet' %}
                         </a>
                     </li>
-                    <li>
+                    <li class="hidden">
                         <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100"
                            href="{% url 'account:profile' %}">
                             <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -126,7 +126,7 @@
                     </li>
                     <li>
                         <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100"
-                           href="{% url 'account:profile' %}">
+                           href="{% url 'account:wishlist' %}">
                             <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                  stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.66l-1.06-1.05a5.5 5.5 0 0 0-7.78 7.78l8.49 8.48a1 1 0 0 0 1.42 0l8.48-8.48a5.5 5.5 0 0 0 .01-7.78z"></path>
@@ -134,7 +134,7 @@
                             {% translate 'Wishlist' %}
                         </a>
                     </li>
-                    <li>
+                    <li class="hidden">
                         <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100"
                            href="{% url 'account:profile' %}">
                             <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
