--- a/digi-shop/src/templates/account/wishlist/wishlist.html
+++ b/digi-shop/src/templates/account/wishlist/wishlist.html
@@ -14,7 +14,7 @@
             <div class="text-center py-12 bg-gray-50 rounded-lg">
                 <h3 class="text-xl font-medium text-gray-700">{% translate "Your wishlist is empty" %}</h3>
                 <p class="text-gray-500 mt-2">{% translate "Browse our products and add items to your wishlist" %}</p>
-                <a href="{% url 'shop:product_list' %}" class="inline-block mt-4 px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
+                <a href="{% url 'inventory:product_list' %}" class="inline-block mt-4 px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
                     {% translate "Shop Now" %}
                 </a>
             </div>
