--- a/digi-shop/src/templates/shop/home/home.html
+++ b/digi-shop/src/templates/shop/home/home.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class="mt-8">
-                <a href="{% url 'shop:category_list' %}"
+                <a href="{% url 'inventory:category_list' %}"
                    class="inline-block px-6 py-3 bg-transparent text-indigo-600 font-semibold rounded-lg border border-indigo-600 hover:bg-indigo-600 hover:text-white  transition duration-300">
                     {% translate 'View All Categories' %}
                 </a>
