--- a/digi-shop/src/templates/shop/category/_category_card.html
+++ b/digi-shop/src/templates/shop/category/_category_card.html
@@ -1,6 +1,6 @@
 {% load static i18n %}
 
-<a href="#" class="flex flex-col items-center p-6 bg-gray-100 rounded-lg hover:bg-gray-200 transition-all duration-300">
+<a href="{{ category.get_absolute_url }}" class="flex flex-col items-center p-6 bg-gray-100 rounded-lg hover:bg-gray-200 transition-all duration-300">
     <span class="text-gray-800 font-medium">{% translate category.name %}</span>
     <small class="text-gray-500">{{ category.product_count }} {% translate 'products' %}</small>
 </a>
