Filter and sort and pagination added

--- a/digi-shop/src/static/assets/css/style.css
+++ b/digi-shop/src/static/assets/css/style.css
@@ -5,6 +5,7 @@
 /* Preline UI */
 @import "../../../node_modules/preline/variants.css";
 @import "./cart.css";
+@import "./filters.css";
 
 /* Plugins */
 /* @plugin "@tailwindcss/forms"; */
