--- a/digi-shop/src/templates/_footer.html
+++ b/digi-shop/src/templates/_footer.html
@@ -33,13 +33,13 @@
         ©{% now "Y" %}<span class="mx-2 text-gray-300">|</span>{% translate 'All Right Received.' %}
     </p>
     <div class="footer-social">
-        <a href="#" class="footer-social-link">
+        <a href="https://linkedin.com/in/masoudkaarimi/" target="_blank" class="footer-social-link">
             {% include 'components/icons/_linkedin.html' %}
         </a>
-        <a href="#" class="footer-social-link">
+        <a href="https://github.com/masoudkaarimi/" target="_blank" class="footer-social-link">
             {% include 'components/icons/_github.html' %}
         </a>
-        <a href="#" class="footer-social-link">
+        <a href="https://t.me/masoudkaarimi/" target="_blank" class="footer-social-link">
             {% include 'components/icons/_telegram.html' %}
         </a>
     </div>
