--- a/blogify/src/templates/blog/components/author/author-grid.html
+++ b/blogify/src/templates/blog/components/author/author-grid.html
@@ -16,8 +16,8 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                          stroke-width="2"
                          stroke-linecap="round" stroke-linejoin="round" class="size-4 rtl:-rotate-180">
-                        <path d="M5 12h14"/>
-                        <path d="m12 5 7 7-7 7"/>
+                        <path d="M5 12h14"></path>
+                        <path d="m12 5 7 7-7 7"></path>
                     </svg>
                 </a>
             </div>
