--- a/blogify/src/templates/blog/components/comments/comment-item-children.html
+++ b/blogify/src/templates/blog/components/comments/comment-item-children.html
@@ -9,7 +9,15 @@
 
             {% if child.level == 2 %}
                 <div class="w-10 border-t border-dashed border-slate-400"></div>
+            {% elif child.level == 3 %}
+                <div class="w-16 border-t border-dashed border-slate-400"></div>
+            {% elif child.level == 4 %}
+                <div class="w-24 border-t border-dashed border-slate-400"></div>
+            {% elif child.level == 5 %}
+                <div class="w-32 border-t border-dashed border-slate-400"></div>
             {% endif %}
+
+
 
             <div class="relative flex-shrink-0 inline-flex items-center justify-center overflow-hidden rounded-full size-10 ring-1 ring-offset-2 ring-slate-300">
                 <img src="{{ child.author.user_profile.get_avatar }}" class="object-cover absolute inset-0 w-full h-full" alt="">
@@ -24,9 +32,8 @@
             </div>
         </div>
 
-        <span class="block mt-2 mb-3 sm:mt-4 sm:mb-4 dark:text-slate-300 {% if child.level == 1 %}ms-8{% elif child.level == 2 %}ms-14{% endif %}">{{ child.content|safe }}</span>
-
-        <div class="flex items-center gap-2 relative {% if child.level == 1 %}ms-8{% elif child.level == 2 %}ms-14{% endif %}">
+        <span class="block mt-2 mb-3 sm:mt-4 sm:mb-4 dark:text-slate-300 {% if child.level == 1 %}ms-8{% elif child.level == 2 %}ms-14{% elif child.level == 3 %}ms-20{% elif child.level == 4 %}ms-28{% elif child.level == 5 %}ms-36{% endif %}">{{ child.content|safe }}</span>
+        <div class="flex items-center gap-2 relative {% if child.level == 1 %}ms-8{% elif child.level == 2 %}ms-14{% elif child.level == 3 %}ms-20{% elif child.level == 4 %}ms-28{% elif child.level == 5 %}ms-36{% endif %}">
             <button type="button" class="btn-ghost btn-ghost-danger" title="{% trans "Likes" %}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                      stroke-linecap="round" stroke-linejoin="round">
@@ -35,7 +42,7 @@
                 <span>59</span>
             </button>
 
-            {% if child.level != 2 %}
+            {% if child.level != 2 and child.level != 3 and child.level != 4 and child.level != 5 %}
                 <button type="button" class="btn-ghost btn-ghost-info" title="{% trans "Reply" %}">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-[18px] w-[18px] mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 10h10a8 8 0 018 8v2M3 10l6 6m-6-6l6-6"></path>
