--- a/blogify/src/templates/blog/post-detail.html
+++ b/blogify/src/templates/blog/post-detail.html
@@ -244,7 +244,7 @@
             </article>
 
             <!-- Sidebar -->
-            {% with posts=posts categories=categories tags=tags authors=authors %}
+            {% with posts=top_posts categories=categories tags=tags authors=authors %}
                 {% include "blog/components/sidebar/sidebar.html" %}
             {% endwith %}
         </div>
